Pull up following revision(s) (requested by uwe in ticket #1411): 	libexec/ld.elf_so/reloc.c: revision 1.110 PR port-macppc/47464 - Old binutils generated bogus zero-sized COPY relocations for _SDA_BASE_ and _SDA2_BASE_ that happened to work by accident.  They no longer happen to work when old binaries are run on newer systems.  Explicitly ignore these bogus relocations.